@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1911 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Improved and stream-lined public interface of XMLClassDescriptorResolver.
+       Details: http://jira.codehaus.org/browse/CASTOR-1911
+       (Werner - 20070316)
+
 XML:   Resolved issue CASTOR-1910 using contribution from Steven Dolg [stevendolg@gmx.at]
        Fixed problem with (incorrectly) caching class descriptors in XMLClassDescriptorResolver
        Details: http://jira.codehaus.org/browse/CASTOR-1910
